# lazarus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL_HOOKS.md  LICENSE  README.md  SECURITY.md  lazarus.config.example.toml  pyproject.toml
.github/workflows/: ci.yml
_smoketest/: lazarus.config.toml
_smoketest/corpus/: no-secrets-in-logs.md  prefer-f-strings.md  timeout-on-external-calls.md
examples/async_demo/: README.md  lazarus.config.toml  run_async_demo.py  run_async_demo.sh  test_async_cycle.py
examples/demo/: README.md  lazarus.config.toml  run_demo.py  run_demo.sh  stub_judge.py  work_unit.diff
hooks/: async_inject.py  async_launcher.py  async_pregate.py  async_runner_entry.py  lazarus_async_launch.py  lazarus_inject.py  lazarus_pregate.py  retro_audit.py  session_start_sweep.py  settings.snippet.json  settings.snippet.v2.json
src/lazarus_sonar/: __init__.py  apply.py  async_runner.py  cli.py  config.py  judge.py  lazarus.py  ledger.py  pending.py  sonar.py
src/lazarus_sonar/async_/: __init__.py  inject.py  launcher.py  pending.py  pregate.py  runner.py  stub_judge.py  trigger.py
tests/: test_apply.py  test_autoapply_e2e.py  test_prime.py  test_runner_trigger_gate.py  test_trigger.py
