MODIFIED ([project.scripts]). Added the `lazarus-audit-bg = "lazarus_sonar.async_runner:main"` console script alongside the existing `lazarus` entry. The canonical concurrency contract (§2) and the runner/launcher docstrings promise this console script (the launcher spawns it as the installed-path fallback when the checkout entry shim is absent), but it was missing from pyproject. The demo itself does not depend on it (it spawns the checkout entry shim), but this closes a real drift for installed users.